# simple-retico-agent

./: .gitignore  .gitmodules  .readthedocs.yaml  ASR_DM.py  CoquiTTSModule.py  LLM_DM.py  MicrophoneModule_PTT.py  README.md  SpeakerModule.py  SpeakerModule_2.py  TTS_DM.py  TTS_DM2.py  VAD.py  VoiceCancellation.py  WaveModule.py  WozAsrModule.py  WozMicrophone.py  WozMicrophone_2.py  WozMicrophone_multiple_files.py  WozMicrophone_one_file.py  WozMicrophone_one_file_allinone.py  additional_IUs.py  amq.py  amq_2.py  basic_plot_config.json  calculate_latency.py  coqui_tts.py  coqui_tts_interruption.py  coqui_tts_interruption_2.py  coqui_tts_interruption_new_coquiTTS.py  coqui_tts_interruption_when_changes.py  dialogue_history.py  dialogue_manager.py  docstringformatter.py  llama.py  llama_chat.py  llama_cpp_chat.py  llama_cpp_example.py  llama_cpp_memory.py  llama_cpp_memory_incremental.py  (+42 more)
.github/: ISSUE_TEMPLATE.md
TTS/: tts_test.py
configs/: plot_config.json  plot_config_2.json  plot_config_3.json
docs/: conf.py  index.rst  installation.md  plot_and_visualization.md  requirements.txt  simple_retico_agent.rst
env_requirements/: Ubuntu install for docs testing.txt  cuda_and_llama_cpp_install_curr.txt  cuda_install_tuto.txt  env_list.txt  llama_cpp_cuda.yml  llama_cpp_cuda_install.txt  psi.yml  retico.yml  retico_cuda.yml  retico_cuda_curr.yml  retico_pip.txt  retico_pip.yml  retico_pip_2.yml  retio_pip.txt  simple_retico_agent_cuda.yml
llama/: finetune_lora_13B.py  install.txt  llama.yml  llama_3b_chat.py  llama_conv_pipeline.py  llama_cpp_loop.py  llama_pipeline.py  llama_test.py  loader.py  (+1 more)
(+166 files in other folders)
