[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-retico-agent"
authors = [{ name = "Marius Le Chapelier", email = "mariuslechaper@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.11.7"
dependencies = [
    "pydub",
    "webrtcvad",
    "faster_whisper",
    "llama-cpp-python",
    "retico-core @ git+https://github.com/articulab/retico-core.git",
    "TTS[py3117] @ git+https://github.com/articulab/CoquiTTS.git@dev",
    # "TTS[versionless] @ git+https://github.com/articulab/CoquiTTS",
]
